--- a/look.css
+++ b/look.css
@@ -1,25 +1,37 @@
 body {
     background-color: aliceblue;
     
-    background-repeat: no-repeat;
-    background-size:   cover;
-    position: absolute;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    align-items: center;
+    align-content: center;
+    display: inline-block;
+  
     
 }
 
-div.image {
-    background-image: url("phpshrek.png");
-    height: 1000px;
-    width: 1000px;
-    background-repeat: no-repeat;
+form {
+    border: 5px solid;
+    border-radius: 10px;
+    align-items: center;
+    align-content: center;
+    background-color: grey;
+   
     
-    position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+}
+
+ .main {
+  
+    height: auto;
+    width: 100%;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    display: flex;
+    
+    
+    margin-left: 50%;
+    margin-right: 50%;
+  align-items: center;
+  align-content: center;
 
 }
 p {
